@@ -24,14 +24,6 @@ Feature: Explore Groups
     Then I should see project "Internal" items
     And I should not see project "Enterprise" items
 
-  Scenario: I should see group's members as user
-    Given group "TestGroup" has internal project "Internal"
-    And "John Doe" is owner of group "TestGroup"
-    When I sign in as a user
-    And I visit group "TestGroup" members page
-    Then I should see group member "John Doe"
-    And I should not see member roles
-
   Scenario: I should see group with private, internal and public projects as visitor
     Given group "TestGroup" has internal project "Internal"
     Given group "TestGroup" has public project "Community"
@@ -55,14 +47,6 @@ Feature: Explore Groups
     Then I should see project "Community" items
     And I should not see project "Internal" items
     And I should not see project "Enterprise" items
-
-  Scenario: I should see group's members as visitor
-    Given group "TestGroup" has internal project "Internal"
-    Given group "TestGroup" has public project "Community"
-    And "John Doe" is owner of group "TestGroup"
-    When I visit group "TestGroup" members page
-    Then I should see group member "John Doe"
-    And I should not see member roles
 
   Scenario: I should see group with private, internal and public projects as user
     Given group "TestGroup" has internal project "Internal"
@@ -90,15 +74,6 @@ Feature: Explore Groups
     Then I should see project "Community" items
     And I should see project "Internal" items
     And I should not see project "Enterprise" items
-
-  Scenario: I should see group's members as user
-    Given group "TestGroup" has internal project "Internal"
-    Given group "TestGroup" has public project "Community"
-    And "John Doe" is owner of group "TestGroup"
-    When I sign in as a user
-    And I visit group "TestGroup" members page
-    Then I should see group member "John Doe"
-    And I should not see member roles
 
   Scenario: I should see group with public project in public groups area
     Given group "TestGroup" has public project "Community"
